--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint_fix": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -16,14 +17,17 @@
     "@hookform/resolvers": "^3.6.0",
     "@lexical/react": "^0.16.1",
     "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
+    "@mui/lab": "^5.0.0-alpha.172",
+    "@mui/material": "^5.16.4",
     "@mui/material-nextjs": "^5.15.11",
-    "@mui/x-data-grid": "^7.7.1",
+    "@mui/x-data-grid": "^7.0.0-beta.7",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.11",
+    "mdi-material-ui": "^7.9.1",
     "next": "14.2.4",
     "quill": "^2.0.2",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
@@ -34,7 +38,9 @@
     "@types/node": "^20.14.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
